--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ &nbsp;</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 11:47am Fri 5th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,55 +95,55 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 11:44am</td>
 	<td class="accounts"><span class="">&nbsp;</span><span class=" hidden">&nbsp;</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts">&nbsp;</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 11:44am</td>
+	<td class="accounts">JPB: $14,042.98 (+$189.15) @ 11:43am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts">&nbsp;</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 11:44am</td>
+	<td class="accounts">CBA: $79,799.19 ($0.00) @ 11:47am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts">&nbsp;</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 11:44am</td>
+	<td class="accounts">ANZ: $4,706.17 ($0.00) @ 11:47am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 11:46am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="computers">&nbsp;</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 11:46am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=770Gb RAM=27% @ 11:44am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="computers">&nbsp;</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 11:46am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 23Gb RAM=37% @ 11:46am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 11:46am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="todo">&nbsp;</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 11:46am</td>
+	<td class="todo">Jun 12 (+7d) [M] ShineWing Invoice P</td>
 	</tr>
 	
 	<tr>
 	<td class="projects" align="center">
 	<a href="index.html">show</a>|<a href="index-hide.html">hide</a>|<a href="index-boss.html">boss</a>
 	</td>
-	<td class="todo">&nbsp;</td>
+	<td class="todo">Jun 12 (+7d) [M] Solvency Declaratio</td>
 	</tr>
 	
 	</table>
