--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ &nbsp;</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 2:37pm Fri 5th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,55 +95,55 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts"><span class=" hidden">&nbsp;</span><span class="">&nbsp;</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;2:35pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $104,323.39 ($0.00) @ 2:35pm</span><span class="">ADS: [hidden] @ 2:35pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts">&nbsp;</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;2:35pm</td>
+	<td class="accounts">JPB: $13,899.14 (+$45.30) @ 2:31pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts">&nbsp;</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;2:35pm</td>
+	<td class="accounts">CBA: $79,806.13 (+$6.94) @ 2:37pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="accounts">&nbsp;</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;2:35pm</td>
+	<td class="accounts">ANZ: $4,706.17 ($0.00) @ 2:37pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;2:37pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="computers">&nbsp;</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;2:37pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=770Gb RAM=29% @ &nbsp;2:35pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="computers">&nbsp;</td>
+	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;2:37pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 23Gb RAM=38% @ &nbsp;2:37pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;2:37pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">&nbsp;</td>
-	<td class="todo">&nbsp;</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;2:37pm</td>
+	<td class="todo">Jun 12 (+7d) [M] ShineWing Invoice P</td>
 	</tr>
 	
 	<tr>
 	<td class="projects" align="center">
 	<a href="index.html">show</a>|<a href="index-hide.html">hide</a>|<a href="index-boss.html">boss</a>
 	</td>
-	<td class="todo">&nbsp;</td>
+	<td class="todo">Jun 12 (+7d) [M] Solvency Declaratio</td>
 	</tr>
 	
 	</table>
