--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 8:57am Sun 7th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:04am Sun 7th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:53am</td>
-	<td class="accounts"><span class=" hidden">ADS: $108,679.84 (-$1,453.49) @ 8:27am</span><span class="">ADS: [hidden] @ 8:27am</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:02am</td>
+	<td class="accounts"><span class=" hidden">ADS: $108,634.64 (-$1,498.69) @ 8:58am</span><span class="">ADS: [hidden] @ 8:58am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;8:53am</td>
-	<td class="accounts">JPB: $13,995.89 (+$80.70) @ 9:43pm</td>
+	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;9:02am</td>
+	<td class="accounts">JPB: $13,995.89 ($0.00) @ 9:43pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;8:53am</td>
-	<td class="accounts">CBA: $79,799.19 ($0.00) @ 8:29am</td>
+	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;9:02am</td>
+	<td class="accounts">CBA: $79,799.19 ($0.00) @ 9:00am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:53am</td>
-	<td class="accounts">ANZ: $4,706.17 ($0.00) @ 8:28am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:02am</td>
+	<td class="accounts">ANZ: $4,706.17 ($0.00) @ 8:59am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ &nbsp;8:56am</td>
+	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ &nbsp;8:56am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=749Gb RAM=49% @ &nbsp;8:53am</td>
+	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=749Gb RAM=59% @ &nbsp;9:02am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;8:56am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 15Gb RAM=42% @ &nbsp;8:56am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;8:59am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 15Gb RAM=54% @ &nbsp;9:03am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;8:56am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;8:59am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:56am</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
 	<td class="todo">Jun 12 (+5d) [M] ShineWing Invoice P</td>
 	</tr>
 	
