--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 10:00am Sun 7th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 10:07am Sun 7th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:53am</td>
-	<td class="accounts"><span class=" hidden">ADS: $108,388.74 ($0.00) @ 9:29am</span><span class="">ADS: [hidden] @ 9:29am</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 10:03am</td>
+	<td class="accounts"><span class=" hidden">ADS: $108,463.38 (+$74.64) @ 10:00am</span><span class="">ADS: [hidden] @ 10:00am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#10060;</span> @ &nbsp;9:53am</td>
-	<td class="accounts">JPB: $13,995.89 ($0.00) @ 9:45am</td>
+	<td class="projects">OD1 <span class="emoji">&#10060;</span> @ 10:03am</td>
+	<td class="accounts">JPB: $13,989.89 (-$6.00) @ 9:55am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;9:53am</td>
-	<td class="accounts">CBA: $79,799.19 ($0.00) @ 9:31am</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 10:03am</td>
+	<td class="accounts">CBA: $79,799.19 ($0.00) @ 10:02am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:53am</td>
-	<td class="accounts">ANZ: $4,706.17 ($0.00) @ 9:30am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 10:03am</td>
+	<td class="accounts">ANZ: $4,706.17 ($0.00) @ 10:01am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;9:58am</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 10:05am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;9:58am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=743Gb RAM=81% @ &nbsp;9:53am</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 10:05am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=743Gb RAM=77% @ 10:03am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;9:58am</td>
-	<td class="computers">Spring:<span class="emoji">&#9940;</span> HDD=  9Gb RAM=86% @ &nbsp;9:58am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 10:05am</td>
+	<td class="computers">Spring:<span class="emoji">&#9940;</span> HDD=  8Gb RAM=86% @ 10:05am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;9:58am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 10:05am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;9:58am</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 10:05am</td>
 	<td class="todo">Jun 12 (+5d) [M] ShineWing Invoice P</td>
 	</tr>
 	
