--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:26am Mon 8th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:33am Mon 8th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 12:22am</td>
-	<td class="accounts"><span class="">ADS: $107,239.44 (-$1,149.30) @ 11:58pm</span><span class=" hidden">ADS: [hidden] @ 11:58pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 12:30am</td>
+	<td class="accounts"><span class="">ADS: $107,760.99 (-$627.75) @ 12:29am</span><span class=" hidden">ADS: [hidden] @ 12:29am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:22am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:30am</td>
 	<td class="accounts">JPB: $13,911.43 (-$84.45) @ 9:43pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:22am</td>
-	<td class="accounts">CBA: $79,799.19 ($0.00) @ 11:59pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:30am</td>
+	<td class="accounts">CBA: $79,799.19 ($0.00) @ 12:30am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 12:22am</td>
-	<td class="accounts">ANZ: $4,706.17 ($0.00) @ 11:59pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 12:30am</td>
+	<td class="accounts">ANZ: $4,706.17 ($0.00) @ 12:30am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 12:24am</td>
+	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 12:31am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 12:24am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=724Gb RAM=54% @ 12:22am</td>
+	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 12:31am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=724Gb RAM=53% @ 12:30am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:24am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 17Gb RAM=28% @ 12:25am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:31am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 17Gb RAM=28% @ 12:32am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:24am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:31am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 12:24am</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 12:31am</td>
 	<td class="todo">Jun 12 (+5d) [M] ShineWing Invoice P</td>
 	</tr>
 	
