--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:02am Tue 9th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:08am Tue 9th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,23 +95,23 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:58am</td>
-	<td class="accounts"><span class="">ADS: $109,898.49 (+$2,199.96) @ 8:32am</span><span class=" hidden">ADS: [hidden] @ 8:32am</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:06am</td>
+	<td class="accounts"><span class="">ADS: $109,983.36 ($0.00) @ 9:03am</span><span class=" hidden">ADS: [hidden] @ 9:03am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;8:58am</td>
-	<td class="accounts">JPB: $14,464.03 (+$552.60) @ 9:44pm</td>
+	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;9:06am</td>
+	<td class="accounts">JPB: $14,464.03 ($0.00) @ 9:44pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;8:58am</td>
-	<td class="accounts">CBA: $79,799.19 ($0.00) @ 8:34am</td>
+	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;9:06am</td>
+	<td class="accounts">CBA: $79,799.19 ($0.00) @ 9:05am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:58am</td>
-	<td class="accounts">ANZ: $7,388.17 (+$2,682.00) @ 8:33am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:06am</td>
+	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 9:04am</td>
 	</tr>
 	
 	<tr>
@@ -121,12 +121,12 @@
 	
 	<tr>
 	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=718Gb RAM=35% @ &nbsp;8:58am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=714Gb RAM=57% @ &nbsp;9:06am</td>
 	</tr>
 	
 	<tr>
 	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 12Gb RAM=45% @ &nbsp;9:01am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 12Gb RAM=50% @ &nbsp;9:07am</td>
 	</tr>
 	
 	<tr>
