--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:07pm Tue 9th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:14pm Tue 9th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:03pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $109,350.43 (-$632.93) @ 11:38am</span><span class="">ADS: [hidden] @ 11:38am</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:13pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $109,544.08 (-$439.28) @ 12:09pm</span><span class="">ADS: [hidden] @ 12:09pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:03pm</td>
-	<td class="accounts">JPB: $14,580.28 (+$116.25) @ 11:52am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:13pm</td>
+	<td class="accounts">JPB: $14,577.28 (+$113.25) @ 12:07pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:03pm</td>
-	<td class="accounts">CBA: $79,815.85 (+$16.66) @ 11:40am</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:13pm</td>
+	<td class="accounts">CBA: $79,806.13 (+$6.94) @ 12:11pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:03pm</td>
-	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 11:39am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:13pm</td>
+	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 12:10pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:05pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:12pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:05pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=710Gb RAM=29% @ 12:03pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:12pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=710Gb RAM=29% @ 12:13pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:05pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 20Gb RAM=32% @ 12:06pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:12pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 20Gb RAM=32% @ 12:13pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:05pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:12pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:05pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:12pm</td>
 	<td class="todo">Jun 12 (+3d) [M] ShineWing Invoice P</td>
 	</tr>
 	
