--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 11:56pm Wed 10th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:01am Thu 11th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 11:51pm</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 12:00am</td>
 	<td class="accounts"><span class=" hidden">ADS: $109,907.21 (+$212.58) @ 11:49pm</span><span class="">ADS: [hidden] @ 11:49pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 11:51pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:00am</td>
 	<td class="accounts">JPB: $14,633.39 (-$90.75) @ 9:44pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 11:51pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:00am</td>
 	<td class="accounts">CBA: $79,806.13 ($0.00) @ 11:51pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 11:51pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 12:00am</td>
 	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 11:50pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 11:55pm</td>
+	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 12:01am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 11:55pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=684Gb RAM=51% @ 11:51pm</td>
+	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 12:01am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=684Gb RAM=51% @ 12:00am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 11:55pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 16Gb RAM=46% @ 11:55pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:01am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 16Gb RAM=46% @ 12:01am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 11:55pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:01am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 11:55pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 12:01am</td>
 	<td class="todo">Jun 12 (+2d) [M] ShineWing Invoice P</td>
 	</tr>
 	
