--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:04am Thu 11th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:11am Thu 11th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,23 +95,23 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:07am</td>
 	<td class="accounts"><span class=" hidden">ADS: $108,558.20 (-$1,136.43) @ 8:06am</span><span class="">ADS: [hidden] @ 8:06am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
-	<td class="accounts">JPB: $14,633.39 (-$90.75) @ 9:44pm</td>
+	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;9:07am</td>
+	<td class="accounts">JPB: $14,633.39 ($0.00) @ 9:44pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
-	<td class="accounts">CBA: $79,806.13 ($0.00) @ 8:38am</td>
+	<td class="projects">OT1 <span class="emoji">&#11036;</span> @ &nbsp;9:07am</td>
+	<td class="accounts">CBA: $79,806.13 ($0.00) @ 9:09am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
-	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 8:38am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;9:07am</td>
+	<td class="accounts">ANZ: $7,388.17 ($0.00) @ 9:09am</td>
 	</tr>
 	
 	<tr>
@@ -121,12 +121,12 @@
 	
 	<tr>
 	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=680Gb RAM=64% @ &nbsp;8:59am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=682Gb RAM=59% @ &nbsp;9:07am</td>
 	</tr>
 	
 	<tr>
 	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 13Gb RAM=56% @ &nbsp;9:04am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 12Gb RAM=51% @ &nbsp;9:10am</td>
 	</tr>
 	
 	<tr>
